--- a/requirements.txt
+++ b/requirements.txt
@@ -14,3 +14,5 @@ faiss-cpu==1.10.0
 google-cloud-aiplatform==1.90.0
 pydantic==2.10.6
 typing-extensions==4.12.2
+selenium-stealth==1.0.6
+webdriver-manager==4.0.2
