--- a/requirements.txt
+++ b/requirements.txt
@@ -16,3 +16,6 @@ pydantic==2.10.6
 typing-extensions==4.12.2
 selenium-stealth==1.0.6
 webdriver-manager==4.0.2
+easyocr==1.7.2
+fastapi==0.115.12
+uvicorn==0.34.2
