docs(.env_sample): fix .env_sample

--- a/.env_sample
+++ b/.env_sample
@@ -7,29 +7,10 @@ GCP_PROJECT="deft-"
 # Vertex AI 리전 (예: asia-northeast3, us-central1 등)
 GCP_LOCATION="asia-northeast3"
 
-# Router 단계 LLM 설정
-LLM_PROVIDER_ROUTER=openai
-MODEL_NAME_ROUTER=gpt-4o
-
-# Generator 단계 LLM 설정
-LLM_PROVIDER_GENERATOR=openai
-MODEL_NAME_GENERATOR=gpt-4o
-
-# Grader 단계 LLM 설정
-LLM_PROVIDER_GRADER=openai
-MODEL_NAME_GRADER=gpt-4o
-
-# Rewriter 단계 LLM 설정
-LLM_PROVIDER_REWRITER=openai
-MODEL_NAME_REWRITER=gpt-4o
-
 # 기타 설정
 RECURSION_LIMIT=15
-# 중간 node 출력
-VERBOSE_NODES=true
 
 LANGSMITH_TRACING=true
 LANGSMITH_ENDPOINT=https://api.smith.langchain.com
 LANGSMITH_API_KEY=lsv2_
-LANGSMITH_PROJECT=Function1-modular
-# print("LANGSMITH_API_KEY:", repr(LANGSMITH_API_KEY))
+LANGSMITH_PROJECT=feature1_v0.0.1
