--- a/requirements.txt
+++ b/requirements.txt
@@ -1,21 +1,145 @@
-# requirements.txt
-# python 3.11.11
-langgraph==0.3.16
+aiohappyeyeballs==2.6.1
+aiohttp==3.11.18
+aiosignal==1.3.2
+annotated-types==0.7.0
+anthropic==0.51.0
+anyio==4.9.0
+attrs==25.3.0
+beautifulsoup4==4.13.3
+cachetools==5.5.2
+certifi==2025.4.26
+charset-normalizer==3.4.2
+click==8.1.8
+dataclasses-json==0.6.7
+deepl==1.22.0
+distro==1.9.0
+docstring_parser==0.16
+easyocr==1.7.2
+faiss-cpu==1.10.0
+fastapi==0.115.12
+feedparser==6.0.11
+filelock==3.18.0
+frozenlist==1.6.0
+fsspec==2025.3.2
+google-api-core==2.24.2
+google-auth==2.40.1
+google-cloud-aiplatform==1.90.0
+google-cloud-bigquery==3.31.0
+google-cloud-core==2.4.3
+google-cloud-resource-manager==1.14.2
+google-cloud-storage==2.19.0
+google-crc32c==1.7.1
+google-resumable-media==2.7.2
+googleapis-common-protos==1.70.0
+grpc-google-iam-v1==0.14.2
+grpcio==1.72.0rc1
+grpcio-status==1.71.0
+h11==0.16.0
+httpcore==1.0.9
+httpx==0.28.1
+httpx-sse==0.4.0
+idna==3.10
+imageio==2.37.0
+iniconfig==2.1.0
+Jinja2==3.1.6
+jiter==0.9.0
+joblib==1.5.0
+jsonpatch==1.33
+jsonpointer==3.0.0
+kiwipiepy==0.21.0
+kiwipiepy_model==0.21.0
+langchain==0.3.22
+langchain-community==0.3.20
 langchain-core==0.3.55
 langchain-openai==0.3.9
-langchain-community==0.3.20
-langchain-text-splitters==0.3.7
 langchain-teddynote==0.3.44
-selenium==4.31.0
-beautifulsoup4==4.13.3
-requests==2.32.3
-python-dotenv==1.0.1
-faiss-cpu==1.10.0
-google-cloud-aiplatform==1.90.0
+langchain-text-splitters==0.3.7
+langgraph==0.3.16
+langgraph-checkpoint==2.0.25
+langgraph-prebuilt==0.1.8
+langgraph-sdk==0.1.66
+langsmith==0.3.42
+lazy_loader==0.4
+lz4==4.4.4
+MarkupSafe==3.0.2
+marshmallow==3.26.1
+mmh3==4.1.0
+mpmath==1.3.0
+multidict==6.4.3
+mypy_extensions==1.1.0
+networkx==3.4.2
+ninja==1.11.1.4
+nltk==3.9.1
+numpy==1.26.4
+olefile==0.47
+openai==1.77.0
+opencv-python-headless==4.11.0.86
+orjson==3.10.18
+ormsgpack==1.9.1
+outcome==1.3.0.post0
+packaging==24.2
+pandas==2.2.3
+pdf2image==1.17.0
+pillow==11.2.1
+pinecone-client==6.0.0
+pinecone-plugin-interface==0.0.7
+pinecone-text==0.10.0
+pluggy==1.5.0
+propcache==0.3.1
+proto-plus==1.26.1
+protobuf==5.29.4
+protoc-gen-openapiv2==0.0.1
+pyasn1==0.6.1
+pyasn1_modules==0.4.2
+pyclipper==1.3.0.post6
 pydantic==2.10.6
-typing-extensions==4.12.2
+pydantic-settings==2.9.1
+pydantic_core==2.27.2
+PySocks==1.7.1
+pytest==8.3.5
+pytest-mock==3.14.0
+python-bidi==0.6.6
+python-dateutil==2.9.0.post0
+python-dotenv==1.0.1
+pytz==2025.2
+PyYAML==6.0.2
+rank-bm25==0.2.2
+regex==2024.11.6
+requests==2.32.3
+requests-toolbelt==1.0.0
+rsa==4.9.1
+scikit-image==0.25.2
+scipy==1.15.2
+selenium==4.31.0
 selenium-stealth==1.0.6
-webdriver-manager==4.0.2
-easyocr==1.7.2
-fastapi==0.115.12
+setuptools==80.3.1
+sgmllib3k==1.0.0
+shapely==2.1.0
+six==1.17.0
+sniffio==1.3.1
+sortedcontainers==2.4.0
+soupsieve==2.7
+SQLAlchemy==2.0.40
+starlette==0.46.2
+sympy==1.14.0
+tavily-python==0.7.2
+tenacity==9.1.2
+tifffile==2025.3.30
+tiktoken==0.9.0
+torch==2.7.0
+torchvision==0.22.0
+tqdm==4.67.1
+trio==0.30.0
+trio-websocket==0.12.2
+types-requests==2.32.0.20250328
+typing-inspect==0.9.0
+typing-inspection==0.4.0
+typing_extensions==4.12.2
+tzdata==2025.2
+urllib3==2.4.0
 uvicorn==0.34.2
+webdriver-manager==4.0.2
+websocket-client==1.8.0
+wsproto==1.2.0
+yarl==1.20.0
+zstandard==0.23.0
